Fixed a bug that would cause a flicker when loading flickr images ;)

--- a/src/Styles/Photos.css
+++ b/src/Styles/Photos.css
@@ -12,6 +12,9 @@
 
 .photos__photo {
   padding: .5em;
+  width: 100vw;
+  text-align: center;
+  /* position: relative; // Causes a white flicker when loading more images */
 }
 
 .photos__photo img {
